--- a/charts/kimbodo-posit-base-resources/templates/workbench/ingress-workbench.yaml
+++ b/charts/kimbodo-posit-base-resources/templates/workbench/ingress-workbench.yaml
@@ -7,7 +7,9 @@ metadata:
   annotations:
     cert-manager.io/cluster-issuer: "letsencrypt-prod"
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
+    {{- if eq .Values.global.cloudProvider "AZURE" }}
     service.beta.kubernetes.io/azure-load-balancer-resource-group: "devops-rg"
+    {{- end}}
 spec:
   ingressClassName: nginx
   tls:
